--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -232,6 +232,7 @@
   },
   "apy": {
     "estimatedYield": "Estimated Yield",
+    "year": "Year",
     "perYear": "per year",
     "collapseDetails": "Collapse details",
     "expandDetails": "Expand details",
