--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -233,6 +233,7 @@
   "apy": {
     "estimatedYield": "Perkiraan Hasil",
     "perYear": "per tahun",
+    "year": "Tahun",
     "collapseDetails": "Tutup rincian",
     "expandDetails": "Perluas rincian",
     "yearly": "Tahunan",
