--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -233,6 +233,7 @@
   "apy": {
     "estimatedYield": "Rendimento stimato",
     "perYear": "all'anno",
+    "year": "Anno",
     "collapseDetails": "Comprimi dettagli",
     "expandDetails": "Espandi dettagli",
     "yearly": "Annuale",
