--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -233,6 +233,7 @@
   "apy": {
     "estimatedYield": "Geschat rendement",
     "perYear": "per jaar",
+    "year": "Jaar",
     "collapseDetails": "Details inklappen",
     "expandDetails": "Details uitklappen",
     "yearly": "Jaarlijks",
