--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -233,6 +233,7 @@
   "apy": {
     "estimatedYield": "Randament estimat",
     "perYear": "pe an",
+    "year": "An",
     "collapseDetails": "Restrânge detaliile",
     "expandDetails": "Extinde detaliile",
     "yearly": "Anual",
