--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -233,6 +233,7 @@
   "apy": {
     "estimatedYield": "Оціночна прибутковість",
     "perYear": "на рік",
+    "year": "Рік",
     "collapseDetails": "Згорнути деталі",
     "expandDetails": "Розгорнути деталі",
     "yearly": "Річна",
