--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -233,6 +233,7 @@
   "apy": {
     "estimatedYield": "Taxminiy daromad",
     "perYear": "yiliga",
+    "year": "Yil",
     "collapseDetails": "Tafsilotlarni yopish",
     "expandDetails": "Tafsilotlarni kengaytirish",
     "yearly": "Yillik",
