--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -233,6 +233,7 @@
   "apy": {
     "estimatedYield": "Lợi suất ước tính",
     "perYear": "trên năm",
+    "year": "Năm",
     "collapseDetails": "Thu gọn chi tiết",
     "expandDetails": "Mở rộng chi tiết",
     "yearly": "Hàng năm",
