--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -241,5 +241,14 @@
     "daily": "Ежедневный",
     "minimumLock": "Минимальный срок",
     "minimumLockValue": "{days} дней"
+  },
+  "raffleModal": {
+    "title": "Условия розыгрыша",
+    "p1": "Мы запускаем масштабный розыгрыш с высокими ставками для нашего сообщества, чтобы отпраздновать взрывной рост нашей децентрализованной экосистемы.",
+    "b1": "Застейкайте 5 000+ Stars в любом тире, чтобы участвовать",
+    "b2": "5 случайных пользователей получат по 300 TON",
+    "b3": "Общий призовой фонд: 1 500 TON",
+    "p2": "Окно возможностей очень узкое. Увеличьте стейк, проверьте подключение кошелька и приготовьтесь к главному дропу.",
+    "p3": "Результаты будут опубликованы в приложении на следующей неделе, после чего все пользователи получат прямое уведомление."
   }
 }
