--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -241,5 +241,14 @@
     "daily": "Щоденна",
     "minimumLock": "Мінімальний блок",
     "minimumLockValue": "{days} днів"
+  },
+  "raffleModal": {
+    "title": "Умови розіграшу",
+    "p1": "Ми запускаємо масштабний розіграш із високими ставками для нашої спільноти, щоб відсвяткувати вибухове зростання нашої децентралізованої екосистеми.",
+    "b1": "Застейкайте 5 000+ Stars у будь-якому рівні, щоб кваліфікуватися",
+    "b2": "5 випадкових користувачів отримають по 300 TON кожен",
+    "b3": "Загальний призовий фонд: 1 500 TON",
+    "p2": "Вікно можливостей дуже вузьке. Збільшіть стейк, перевірте підключення гаманця та підготуйтеся до найпотужнішого дропу.",
+    "p3": "Результати буде опубліковано в застосунку наступного тижня, після чого всі користувачі отримають пряме сповіщення."
   }
 }
